--- a/index.html
+++ b/index.html
@@ -7,19 +7,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="mobile-web-app-capable" content="yes">
 
-	<title>FlappyJS</title>
+	<link rel="stylesheet" href="style.css">
 
-	<style>
-	canvas {
-		display: block;
-		position: absolute;
-		margin: auto;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-	}
-	</style>
+	<title>FlappyJS</title>
 </head>
 <body>
 
